[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Modular Characters/Person.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Groin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Body.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Arm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Forearm.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Hand.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Head.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Modular Characters/Person/Mouth.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Modular Characters/Person/Eye.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Leg.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Calf.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Modular Characters/Person/Body Parts/Foot.tscn" type="PackedScene" id=12]

[node name="Person" type="Node2D"]
script = ExtResource( 1 )

[node name="Groin" parent="." instance=ExtResource( 2 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, -205 )

[node name="Body" parent="Groin" instance=ExtResource( 3 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, -20 )

[node name="LeftArm" parent="Groin/Body" instance=ExtResource( 4 )]
editor/display_folded = true
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( -40, -105 )
z_index = 1

[node name="Forearm" parent="Groin/Body/LeftArm" instance=ExtResource( 5 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( -75, 0 )

[node name="Hand" parent="Groin/Body/LeftArm/Forearm" instance=ExtResource( 6 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( -85, 0 )
rotation = 1.5708

[node name="RightArm" parent="Groin/Body" instance=ExtResource( 4 )]
editor/display_folded = true
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 40, -100 )
scale = Vector2( -1, 1 )
z_index = -1

[node name="Forearm" parent="Groin/Body/RightArm" instance=ExtResource( 5 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( -75, 0 )

[node name="Hand" parent="Groin/Body/RightArm/Forearm" instance=ExtResource( 6 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( -85, 0 )
rotation = 1.5708

[node name="Head" parent="Groin/Body" instance=ExtResource( 7 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, -150 )

[node name="Mouth" parent="Groin/Body/Head" instance=ExtResource( 8 )]
position = Vector2( 0, -50 )
mouthShape = 12

[node name="EyeFocus" type="Node2D" parent="Groin/Body/Head"]
position = Vector2( 0, -130 )

[node name="LeftEye" parent="Groin/Body/Head" instance=ExtResource( 9 )]
position = Vector2( -60, -120 )
eyeColor = Color( 0.423529, 0.647059, 0.501961, 1 )

[node name="RightEye" parent="Groin/Body/Head" instance=ExtResource( 9 )]
position = Vector2( 60, -120 )
eyeColor = Color( 0.423529, 0.647059, 0.501961, 1 )
rightEye = true

[node name="LeftLeg" parent="Groin" instance=ExtResource( 10 )]
editor/display_folded = true
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( -30, 30 )
z_index = 1

[node name="Calf" parent="Groin/LeftLeg" instance=ExtResource( 11 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, 65 )

[node name="Foot" parent="Groin/LeftLeg/Calf" instance=ExtResource( 12 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, 90 )

[node name="RightLeg" parent="Groin" instance=ExtResource( 10 )]
editor/display_folded = true
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 30, 30 )
z_index = -1

[node name="Calf" parent="Groin/RightLeg" instance=ExtResource( 11 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, 65 )

[node name="Foot" parent="Groin/RightLeg/Calf" instance=ExtResource( 12 )]
self_modulate = Color( 1, 0.878431, 0.741176, 1 )
position = Vector2( 0, 90 )
